--- a/android-client/debateme/res/values/strings.xml
+++ b/android-client/debateme/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">debateme</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    <string name="share_subject">Discussion share from Vispar</string>
+    <string name="no_app_to_share">Nothing to share</string>
+    <string name="select_to_share">Select an app to share</string>
+    <string name="clipboard_share">You can also invite your friends using the link, which is copied to clipboard</string>
 </resources>
