--- a/android-client/Vispar/res/values/strings.xml
+++ b/android-client/Vispar/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Vispar</string>
     <string name="MySessions">Meet</string>
+    <string name="Schedule">Schedule</string>
     <string name="Explore">Explore</string>
     <string name="Follow">Follow</string>
     <string name="hello_world">Hello world!</string>
@@ -12,8 +13,12 @@
     <string name="select_to_share">Select an app to share</string>
     <string name="copy_to_clipboard">Clipboard</string>
     <string name="clipboard_share">You can also invite your friends using the link, which is copied to clipboard</string>
-    <string name="invite_friends">Invite Friends</string>
-    <string name="start_session">Start a Session</string>
-    <string name="view_past_sessions">View Past Sessions</string>
+    <string name="invite_friends">Invite Now</string>
+    <string name="start_event">Start Event Now</string>
+    <string name="view_past_events">View Past Events</string>
+    <string name="start_schedules">Schedule A New Event</string>
+    <string name="view_schedules">View My Schedules</string>
+    <string name="modify_schedules">Modify</string>
+    <string name="invite_schedules">Invite An Scheduled Event</string>
     <string name="invite_session_message">Join my Vispar session by clicking here: </string>
 </resources>
