--- a/android-client/Vispar/res/values/strings.xml
+++ b/android-client/Vispar/res/values/strings.xml
@@ -16,10 +16,10 @@
     <string name="invite_friends">Invite Now</string>
     <string name="start_event">Start Event Now</string>
     <string name="view_past_events">View Past Events</string>
-    <string name="start_schedules">Schedule A New Event</string>
-    <string name="view_schedules">View My Schedules</string>
+    <string name="start_schedules">Schedule New Event</string>
+    <string name="view_schedules">View Schedules</string>
     <string name="modify_schedules">Modify</string>
-    <string name="invite_schedules">Invite An Scheduled Event</string>
+    <string name="invite_schedules">Invite People</string>
     <string name="invite_session_message">Join my Vispar session by clicking here: </string>
     <string name="invite_event_message">Book my Vispar event by clicking here: </string>
     <string name="event_is_public">Public</string>
