--- a/android-client/Vispar/res/values/strings.xml
+++ b/android-client/Vispar/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="Follow">Follow</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
     <string name="share_subject">Discussion share from Vispar</string>
     <string name="no_app_to_share">Nothing to share</string>
     <string name="select_to_share">Select an app to share</string>
@@ -25,6 +26,8 @@
     <string name="event_is_public">Public</string>
     <string name="title_activity_start_event">Start A Event</string>
     <string name="title_activity_view_event">View A Event</string>
+
+    <string name="title_activity_logout">Log out</string>
     
     <string name="event_title">Title</string>
     <string name="event_description">Description</string>
@@ -35,5 +38,7 @@
     <string name="event_private">Private</string>
     <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
+    <string name="logout_success">Successfully logged out</string>
+    <string name="logout_fail">Cannot log out</string>
 
 </resources>
