added proper text and modified the return code to be not starting from 0.

--- a/android-client/Vispar/res/values/strings.xml
+++ b/android-client/Vispar/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="cancel">Cancel</string>
     <string name="logout_success">Successfully logged out</string>
     <string name="logout_fail">Cannot log out</string>
+    <string name="loading_in_progress">Loading</string>
 
 </resources>
