--- a/android-client/Vispar/res/values/strings.xml
+++ b/android-client/Vispar/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="clipboard_share">You can also invite your friends using the link, which is copied to clipboard</string>
     <string name="invite_friends">Invite Now</string>
     <string name="start_event">Start Event Now</string>
+    <string name="join_event">Join An Event</string>
+    <string name="join_other_title">Join An Event</string>
+    <string name="join_other_message">Type one\'s username</string>
     <string name="view_past_events">View Past Events</string>
     <string name="start_schedules">Schedule New Event</string>
     <string name="view_schedules">View Schedules</string>
